# Duplicate-Image-Finder

./: .gitignore  .readthedocs.yaml  Dockerfile  LICENSE.txt  MANIFEST.in  README.md  TODO.md  benchmark.md  dif.py  difPy_lower_quality_1675290903_2173665.txt  difPy_results_1675290903_2173665.json  difPy_stats_1675290903_2173665.json  dupl_image_finder.py  performance.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.db
.github/: FUNDING.yml
PyDif/: __init__.py
difPy/: __init__.py  __main__.py  actions.py  database.py  datatransfer.py  dif.py  difPy.bat  difPy.py  fastDif.py  image_processor.py  sql_database.py  utils.py  version.py
docs/: app.rst  concepts.rst  conf.py  contributing.rst  faq.rst  index.rst  parameters.rst  pyproject.toml  requirements.txt  usage.rst
docs/01_getting_started/: basic_usage.rst  cli_usage.rst  output.rst
docs/02_methods/: build.rst  search.rst
docs/03_contributing/: contributing.rst
docs/04_resources/: desktop.rst  large_datasets.rst  report_bug.rst
docs/contributing/: support.rst
docs/getting_started/: cli_usage.rst  installation.rst  output.rst
docs/getting_started/output/: main.rst  result.rst
docs/methods/: build.rst  chunksize.rst  search.rst  search_deletes.rst  search_moveto.rst
docs/methods/params/: in_folder.rst
docs/methods/search/: search.rst  similarity.rst
docs/methods/search_delete/: search_deletes.rst
docs/methods/search_moveto/: search_moveto.rst
docs/misc/: support_difpy.rst  top_announce_maintenance.rst
docs/output/: lower_quality.rst  result.rst  result_infolder.rst  stats.rst
docs/parameters/: chunksize.rst  destination_path.rst  directory.rst  in_folder.rst  lazy.rst  limit_extensions.rst  main.rst  processes.rst  px_size.rst  recursive.rst  rotate.rst  show_progress.rst  silent_del.rst  similarity.rst
docs/parameters/deprecated/: logs.rst
docs/resources/: desktop.rst  faq.rst  report_bug.rst  supported_filetypes.rst
docs/source/: Index.rst  conf.py  general.rst  usage.rst
docs/static/css/: custom.css
fast_diff_py/: __init__.py  child_processes.py  config.py  cpu_image_processor.py  database.py  datatransfer.py  dif.py  fastDif.py  fast_diff_base.py  gpu_image_processor.py  image_processor.py  keyboard_input_test.py  mariadb_database.py  sql_database.py  utils.py
scratch/: multi_logging.py
scripts/: compress.py  deduplicate.py  duplicate_generator.py  test_file.py  testing.py  testing_original.py  tinker.py
src/fast_diff_py/: __init__.py  base_process.py  cache.py  child_processes.py  child_processes_new.py  config.py  config_new.py  cpu_image_processor.py  database.py  datatransfer.py  datatransfer_new.py  dif.py  fastDif.py  fast_dif.py  fast_dif_new.py  fast_diff_base.py  gpu_image_processor.py  img_processing.py  img_processing_gpu.py  main.py  mariadb_database.py  sql_database.py  sqlite_db.py  sqlite_wrapper.py  utils.py
tests/: test_difpy.py
