[metadata]
attr: fast_diff_py.VERSION
name = fast_diff_py
description = Multithreaded implementation of difpy with progress retention.
long_description = file: README.md
author = Alexander Sotoudeh
author_email = alisot200@gmail.com
keywords = python, image deduplicator, fast image deduplicator
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8

[options]
zip_safe = False
include_package_data = False
package_dir=
    =src
packages = find:
python_requires = >=3.8
install_requires =
    matplotlib
    numpy
    opencv-python
    scikit-image
    scipy

[options.extras_require]
gpu= cupy
mariadb = mariadb

[options.packages.find]
where=src
exclude =
    scripts*
    difPy*